--- a/backend_mongo/package.json
+++ b/backend_mongo/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "deploy": "npm start"
   },
   "dependencies": {
     "express": "^4.18.2",
