Fix Railway deployment: routing, CORS, and build process

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Travel App - Full Stack Application with React Frontend and Node.js Backend",
   "scripts": {
     "build": "cd frontend && npm install && npm run build",
+    "predeploy": "cd frontend && npm install && npm run build && cp -r dist ../backend_mongo/frontend-dist",
+    "deploy": "cd backend_mongo && npm install && npm start",
     "start": "cd backend_mongo && npm start",
-    "dev": "concurrently \"cd frontend && npm run dev\" \"cd backend_mongo && npm run dev\"",
-    "deploy": "npm run build && npm start"
+    "dev": "concurrently \"cd frontend && npm run dev\" \"cd backend_mongo && npm run dev\""
   },
   "engines": {
     "node": ">=18.0.0"
